# cosmos

./: .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .rubocop.yml  .trivyignore  .whitelist  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.txt  Gemfile  INSTALL.md  LICENSE.md  Makefile  README.md  RELEASE.txt  Taskfile.yaml  _openc3  architecture.md  build-cache.hcl  build_and_push.sh  codecov.yml  compose-build-ubi.yaml  compose-build.yaml  compose-dev.yaml  compose-ubi.yaml  compose.core.yaml  compose.override.yaml  compose.yaml  compose.yaml.template  compose.yaml.template.README.md  justfile  mise.toml  openc3.bat  openc3.code-workspace  openc3.sh  package.json  sonar-project.properties  trivy.yaml  (+1 more)
openc3-app/: .dockerignore  .gitignore  Cargo.toml  README.md  build.sh  package.ps1  package.sh  requirements.md
openc3-app/assets/: README.md
openc3-app/assets/icons/: icon.icns
openc3-app/docker/: Dockerfile.build  build.sh  dedupe_load_commands.py
openc3-app/docs/: bridge-architecture.md
openc3-app/src/: bridge.rs  cli.rs  commands.rs  context.rs  docker.rs  download.rs  enroll.rs  env_file.rs  future.rs  gui.rs  hostfiles.rs  install.rs  logging.rs  main.rs  monitor.rs  operator.rs  process.rs  tray.rs  util.rs
openc3-app/tools/: gen_app_icons.py  gen_icons.py
openc3-cosmos-migration/: Dockerfile  README.md  bin_file_processor.py  docker-compose.test.yml  migration_microservice.py  pyproject.toml
openc3-cosmos-migration/tests/: conftest.py  test_bin_file_processor.py  test_questdb_integration.py
openc3/python/: .coveragerc  .gitignore  .pylintrc  MANIFEST.in  README-DEV.md  README.md  RELEASE.txt  TESTS.txt  bridge.txt  justfile  openc3pycli.py  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt  ruby_to_python.py  ruff.toml  setup.py  test_cmd_api.py  test_structure.py
openc3/python/docs/: environment.md
openc3/python/examples/: cosmos_example.py  cosmos_v5_enterprise_example.py  cosmos_v5_example.py  cosmos_v5_stream_example.py  cosmos_web_socket_example.py  interactive.py  test.txt
openc3/python/openc3/: __init__.py  __version__.py  api_shared.py  authorization.py  cli.py  commands.py  connection.py  cosmos_api.py  decorators.py  environment.py  exceptions.py  extract.py  internal_api.py  limits.py  stream.py  stream_shared.py  telemetry.py  timeline_api.py  tools.py  top_level.py
openc3/python/openc3/accessors/: accessor.py  binary_accessor.py  cbor_accessor.py  form_accessor.py  html_accessor.py  http_accessor.py  json_accessor.py  template_accessor.py  xml_accessor.py
openc3/python/openc3/api/: __init__.py  api_shared.py  authorized_api.py  calendar_api.py  cmd_api.py  config_api.py  interface_api.py  limits_api.py  offline_access_api.py  router_api.py  settings_api.py  stash_api.py  target_api.py  tlm_api.py
openc3/python/openc3/bridge/: bridge.py  bridge_config.py  bridge_interface_thread.py  bridge_router_thread.py  bridge_test.py
openc3/python/openc3/config/: config_parser.py
openc3/python/openc3/conversions/: bit_reverse_conversion.py  conversion.py  generic_conversion.py  ip_read_conversion.py  ip_write_conversion.py  object_read_conversion.py  object_write_conversion.py  packet_time_formatted_conversion.py  packet_time_seconds_conversion.py  polynomial_conversion.py  processor_conversion.py  received_count_conversion.py  received_time_formatted_conversion.py  received_time_seconds_conversion.py  segmented_polynomial_conversion.py  unix_time_conversion.py  unix_time_formatted_conversion.py  unix_time_seconds_conversion.py
openc3/python/openc3/interfaces/: bridge_interface.py  file_interface.py  http_client_interface.py  http_server_interface.py  interface.py  mqtt_interface.py  mqtt_stream_interface.py  serial_interface.py  simulated_target_interface.py  stream_interface.py  tcpip_client_interface.py  tcpip_server_interface.py  udp_interface.py
openc3/python/openc3/io/: io_multiplexer.py  json_api.py  json_api_object.py  json_drb_object.py  json_rpc.py  posix_serial_driver.py  serial_driver.py  stderr.py  stdout.py  udp_sockets.py  win32_serial_driver.py
openc3/python/openc3/json_rpc/: __init__.py  base.py  error.py  request.py  response.py
openc3/python/openc3/logs/: log_writer.py  packet_log_constants.py  packet_log_reader.py  packet_log_writer.py  stream_log.py  stream_log_pair.py
openc3/python/openc3/microservices/: bridge_microservice.py  decom_microservice.py  host_interface_microservice.py  interface_decom_common.py  interface_microservice.py  microservice.py  quest_microservice.py  router_microservice.py  tsdb_microservice.py
openc3/python/openc3/models/: activity_model.py  bridge_interface_model.py  bridge_model.py  cvt_model.py  db_sharded_model.py  host_microservice_model.py  interface_model.py  interface_status_model.py  metric_model.py  microservice_model.py  microservice_status_model.py  model.py  notification_model.py  offline_access_model.py  queue_model.py  reducer_model.py  router_model.py  router_status_model.py  scope_model.py  script_engine_model.py  script_status_model.py  secret_model.py  setting_model.py  sharded_model.py  stash_model.py  target_model.py  timeline_model.py  tool_config_model.py
openc3/python/openc3/packets/: command_validator.py  commands.py  json_packet.py  limits.py  limits_response.py  packet.py  packet_config.py  packet_item.py  packet_item_limits.py  structure.py  structure_item.py  telemetry.py
openc3/python/openc3/processors/: processor.py  statistics_processor.py  watermark_processor.py
openc3/python/openc3/script/: __init__.py  api_shared.py  authorization.py  autonomic.py  calendar.py  commands.py  connection.py  cosmos_api.py  cosmos_calendar.py  critical_cmd.py  decorators.py  exceptions.py  extract.py  internal_api.py  limits.py  metadata.py  packages.py  plugins.py  queue.py  screen.py  script_runner.py  server_proxy.py  storage.py  stream.py  (+9 more)
openc3/python/test/: conftest.py  spec_to_test.py  test_authorization.py  test_connection.py  test_helper.py  test_json_rpc_error.py  test_json_rpc_request.py  test_json_rpc_response.py
(+6830 files in other folders)
